%%{init: {
  "theme": "base",
  "themeVariables": {
    "fontSize": "14px",
    "primaryColor": "#FFD23F",
    "primaryTextColor": "#1A1A1A",
    "primaryBorderColor": "#1A1A1A",
    "lineColor": "#1A1A1A",
    "secondaryColor": "#FF6B6B",
    "tertiaryColor": "#4ECDC4",
    "noteBkgColor": "#FFF7E1",
    "noteTextColor": "#1A1A1A",
    "noteBorderColor": "#1A1A1A"
  }
}}%%
stateDiagram-v2
  direction LR
  [*] --> Staging: <b>kg_propose_schema</b><br/>SchemaProposer.propose()
  Staging --> Validated: reasoner accepts<br/>(no contradictions)
  Staging --> Expired: TTL elapsed,<br/>no references
  Validated --> Promoted: N usages within TTL<br/><b>PromotionSweeper.promote()</b>
  Validated --> Expired: TTL elapsed
  Promoted --> Demoted: <b>kg_demote</b><br/>LifecycleController.move()
  Expired --> [*]
  Demoted --> [*]

  classDef stage     fill:#FFD23F,stroke:#1A1A1A,stroke-width:3px,color:#1A1A1A,font-weight:bold
  classDef validated fill:#4ECDC4,stroke:#1A1A1A,stroke-width:3px,color:#1A1A1A,font-weight:bold
  classDef promoted  fill:#06D6A0,stroke:#1A1A1A,stroke-width:3px,color:#1A1A1A,font-weight:bold
  classDef expired   fill:#1A535C,stroke:#1A1A1A,stroke-width:3px,color:#FFFFFF,font-weight:bold
  classDef demoted   fill:#FF6B6B,stroke:#1A1A1A,stroke-width:3px,color:#FFFFFF,font-weight:bold

  class Staging stage
  class Validated validated
  class Promoted promoted
  class Expired expired
  class Demoted demoted

  note right of Staging
    graph: <b>kg:tbox-staging</b>
  end note
  note right of Promoted
    graph: <b>kg:tbox</b>
    drops kg:inferred to
    force re-materialization
  end note
